--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="https://via.placeholder.com/150x50" alt="Ezee Logo"></a>
+            <a class="navbar-brand" href="#"><img src="Ezee_logo.png" alt="Ezee Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
