--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #1e1e2f, #2e2e3f);
+            color: #fff;
+            overflow-x: hidden;
+        }
+        .animated-bg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background: url('https://www.transparenttextures.com/patterns/asfalt-light.png');
+            animation: bgAnimation 15s linear infinite;
+        }
+        @keyframes bgAnimation {
+            from {
+                transform: translate(0, 0);
+            }
+            to {
+                transform: translate(-50px, -50px);
+            }
         }
         .navbar-brand img {
             height: 50px;
@@ -17,15 +38,25 @@
             margin: 10px;
             transition: transform 0.3s, box-shadow 0.3s;
         }
+        .card {
+            margin: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            border: none;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
         .card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            transform: translateY(-10px) rotate(2deg);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
         }
         .btn {
-            transition: background-color 0.3s, transform 0.3s;
+            background-color: #007bff;
+            border: none;
+            transition: transform 0.3s;
         }
         .btn:hover {
-            background-color: #007bff;
             transform: scale(1.05);
         }
         footer {
@@ -44,7 +75,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="animated-bg"></div>
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="Ezee_logo.png" alt="Ezee Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
